[gd_scene load_steps=6 format=3 uid="uid://dvhtr75lf8pdo"]

[ext_resource type="Script" path="res://script/PauseMenu.gd" id="1_ghv2o"]
[ext_resource type="Texture2D" uid="uid://cx5sibom53iss" path="res://assets/menu/buttonHome-removebg-preview.png" id="2_3ghar"]
[ext_resource type="Texture2D" uid="uid://1hd8wpsw2jcv" path="res://assets/menu/buttonRefresh-removebg-preview.png" id="3_koc57"]
[ext_resource type="Texture2D" uid="uid://co15s8u3oqljg" path="res://assets/menu/buttonPlay-removebg-preview.png" id="4_fhmu8"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6jrp5"]
bg_color = Color(0, 0, 0, 0.00392157)

[node name="PauseMenu" type="Control"]
process_mode = 2
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_ghv2o")

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_6jrp5")

[node name="ButtonContainer" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(64, 64)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -116.0
offset_top = -116.0
offset_right = 116.0
offset_bottom = 116.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 1

[node name="HomeButton" type="TextureButton" parent="ButtonContainer"]
texture_filter = 1
layout_mode = 2
texture_normal = ExtResource("2_3ghar")
stretch_mode = 4

[node name="RestartButton" type="TextureButton" parent="ButtonContainer"]
layout_mode = 2
texture_normal = ExtResource("3_koc57")
stretch_mode = 4

[node name="ResumeButton" type="TextureButton" parent="ButtonContainer"]
layout_mode = 2
texture_normal = ExtResource("4_fhmu8")
stretch_mode = 4
